# tecd-retail-recsys

./: .gitignore  .pre-commit-config.yaml  README.md  demo.ipynb  pyproject.toml  t_ecd_small_partial.dvc
.dvc/: config
configs/: config.yaml
configs/data/: default.yaml
configs/model/: mlp.yaml
configs/train/: default.yaml
tecd_retail_recsys/: __init__.py  commands.py  infer.py  train.py
tecd_retail_recsys/data/: __init__.py  dataset.py  preprocessing.py
tecd_retail_recsys/models/: __init__.py  mlp_ranker.py
